[package]
name = "scenic_driver_glfw_rust"
version = "0.1.0"
authors = ["root"]
edition = "2018"

[dependencies]
gl = "0.10.0"
byteorder = "1"
#lazy_static = "1.0"

[dependencies.nanovg]
version = "1.0.2"
features = ["gl3"]

[dependencies.nanovg-sys]
version = "1.0.2"


[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

